# shadow-gym

./: .gitignore  README.md  pyproject.toml
assets/hand/: reach.xml
config/: config.yaml
config/goal/: medium.yaml  sign_h.yaml  simple.yaml
config/hydra/: local.yaml
config/signs/: a.yaml  i.yaml  l.yaml  r.yaml
config/sites/: finger.yaml  fingertip.yaml  target.yaml
scripts/: manual.py
src/: debug.py  debug_cp.py  debug_lf.py  demo.py  env.py  main.py  render.py  test.py  train.py  train_correct.py  train_incorrect.py
src/camera/: camera_logger.py
src/config/: __init__.py  base.py  camera.py  robot.py  signs.py
src/core/: __init__.py  crossproduct.py  env.py  ground.py  label.py  machine.py
src/manual/: manual.py  test.py
