[project]
dependencies = [
  "gymnasium[other]>=1.2.1",
  "hydra-core>=1.3.2",
  "imageio>=2.37.0",
  "mujoco>=3.3.7",
  "stable-baselines3>=2.7.0",
  "tensorboard>=2.20.0",
  "wandb>=0.22.3",
]
description = "Add your description here"
name = "shadow-gym"
readme = "README.md"
requires-python = ">=3.10.12,<3.11"
version = "0.1.0"

[dependency-groups]
dev = [
  "pyright>=1.1.407",
  "ruff>=0.14.3",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.12"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportCallIssue = "none"
venv = ".venv"
venvPath = "."

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "C901", # too complex
  "W191", # indentation contains tabs
  "D401", # imperative mood
  "D100", # missing docstring in public module
  "D104", # missing docstring in public package
  "B010", # conflicting with pyright
]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "N", # PEP8 naming conventions
  "D", # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"
